<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/location"
        app:srcCompat="@drawable/ic_destinations" />

    <Button
        android:id="@+id/start_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:fontFamily="@font/robotoslabbold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/start_tracking"
        android:textColor="#000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/stop_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:fontFamily="@font/robotoslabbold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/stop_tracking"
        android:textColor="#000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/start_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/robotoslabbold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/get_location"
        android:textColor="#000"
        android:textSize="20sp" />

</LinearLayout>